Ensure contrast on social sharing icons when hovered

--- a/modules/social-sharing/src/sass/style.scss
+++ b/modules/social-sharing/src/sass/style.scss
@@ -17,6 +17,12 @@
 
 		}
 
+		&:hover {
+
+			color: white;
+
+		}
+
 	}
 
 	svg {
